--- a/TODO.txt
+++ b/TODO.txt
@@ -12,9 +12,9 @@ args in init:
 - option representation used to specify option type
 	- '-o'			  		stand-alone option -o takes no argument
 	- '-o:'			  		takes a string argument
-	- '-o:_file_,typ1,typ2' takes file path argument
+	- '-o:_file_:typ1:typ2' takes file path argument
 	- '-o:_dir_'			takes a directory path argument
-	- '-o:arg1,arg2   		arg can be any of the following comma separated args but nothing else
-	- '-o:_int_,min,max'	takes an integer arg between min and max (use * to unbound one or the other)
-	- '-o:_double_,min,max' takes a double arg between min and max (use * to unbound one or the other)
+	- '-o:arg1:arg2   		arg can be any of the following comma separated args but nothing else
+	- '-o:_int_:min:max'	takes an integer arg between min and max (use * to unbound one or the other)
+	- '-o:_double_:min:max' takes a double arg between min and max (use * to unbound one or the other)
 	
