--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,6 @@ args in init:
 					ex: '-o:_file_:Text File,*.txt:Image File,*.png,*.mpg,*.jpg'
 	- '-o:_dir_'		    takes a directory path argument
 	- '-o:_menu_:arg1:arg2 	    arg can be any of the following comma separated args but nothing else
-	- '-o:_int_:min:max'	    takes an integer arg between min and max (use * to unbound one or the other)
-	- '-o:_double_:min:max'     takes a double arg between min and max (use * to unbound one or the other)
+	- '-o:_int_:min:max:step'   takes an integer arg between min and max (use * to unbound one or the other)
+	- '-o:_float_:min:max:step' takes a float arg between min and max (use * to unbound one or the other)
 	
